devpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: devpod-1
spec:
  containers:
    - name: devpod-x
      image: docker.io/busybox
      imagePullPolicy: IfNotPresent
      command: [ '/bin/sh', '-c', 'sleep 1600' ]
      volumeMounts:
      - name: config-vol
        mountPath: /etc/config
  volumes:
    - name: config-vol
      configMap:
        name: devconf
        items:
        - key: devconf.conf
          path: devconfig
        - key: userconf.txt
          path: userconfig
  restartPolicy: Never
