wp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  tls:
  - hosts:
    - web1.example.com
    secretName: wp-secret
  rules:
  - host: web1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
