networkpolicy.yaml
kind: NetworkPolicy 
apiVersion: networking.k8s.io/v1 
metadata: 
  name: access-nginx 
spec: 
  podSelector: 
    matchLabels: 
      app: nginx 
  ingress: 
  - from: 
    - podSelector: 
        matchLabels: 
          access: 'frontend'
    - namespaceSelector:
        matchLabels:
          project: 'frontend'
